<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/walking_exercise_option"
        android:title="@string/walking_exercise_option"/>
    <item android:id="@+id/running_exercise_option"
        android:title="@string/running_exercise_option"/>
    <item android:id="@+id/swimming_exercise_option"
        android:title="@string/swimming_exercise_option"/>
    <item android:id="@+id/climbing_exercise_option"
        android:title="@string/climbing_exercise_option"/>
    <item android:id="@+id/yoga_exercise_option"
        android:title="@string/yoga_exercise_option"/>
    <item android:id="@+id/badminton_exercise_option"
        android:title="@string/badminton_exercise_option"/>
    <item android:id="@+id/hockey_exercise_option"
        android:title="@string/hockey_exercise_option"/>
    <item android:id="@+id/tennis_exercise_option"
        android:title="@string/tennis_exercise_option"/>
    <item android:id="@+id/basketball_exercise_option"
        android:title="@string/basketball_exercise_option"/>
    <item android:id="@+id/soccer_exercise_option"
        android:title="@string/soccer_exercise_option"/>
    <item android:id="@+id/football_exercise_option"
        android:title="@string/football_exercise_option"/>
    <item android:id="@+id/baseball_exercise_option"
        android:title="@string/baseball_exercise_option"/>
    <item android:id="@+id/golf_exercise_option"
        android:title="@string/golf_exercise_option"/>
    <item android:id="@+id/pilates_exercise_option"
        android:title="@string/pilates_exercise_option"/>
    <item android:id="@+id/parkour_exercise_option"
        android:title="@string/parkour_exercise_option"/>
    <item android:id="@+id/dancing_exercise_option"
        android:title="@string/dancing_exercise_option"/>
    <item android:id="@+id/lacrosse_exercise_option"
        android:title="@string/lacrosse_exercise_option"/>
    <item android:id="@+id/wrestling_exercise_option"
        android:title="@string/wrestling_exercise_option"/>
    <item android:id="@+id/martial_arts_exercise_option"
        android:title="@string/martial_arts_exercise_option"/>
</menu>